test_suite/tests/ui/malformed/rename.stderr
error: malformed rename attribute, expected `rename(serialize = ..., deserialize = ...)`
 --> $DIR/rename.rs:5:20
  |
5 |     #[serde(rename(unknown))]
  |                    ^^^^^^^
