test_suite/tests/ui/malformed/rename.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename(unknown))]
    x: (),
}

fn main() {}
